# netflix-encoder

./: .gitignore  DESIGN.md  GPU_METER.md  README.md  STITCHING_KNOWLEDGE.md  frame_classifier.py  frame_handler.py  gpu_meter.c  netflix_encoder.py  nvml_test.c  poc0_baseline_handler.py  poc1_classifier_handler.py  poc2_skip_unchanged_handler.py  poc3_region_handler.py  poc4_region_encode_handler.py  poc5_pskip_generator.py  poc6_single_splice.py  poc7_live_splice_handler.py  poc_vfr_debug.py  poc_vfr_direct.py  poc_vfr_test.py  poc_vfr_test2.py  shm_reader.py  video_writer.py
docs/: MORE_ZERO_COPY.md
vulkan_layer/: CMakeLists.txt  VK_LAYER_CHROME_frame_capture.json  frame_capture_layer.c  frame_capture_layer.h  nvenc_encode.c  nvenc_encode.h  shm_protocol.h
